--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "CapstoneProjectAPI",
+  "version": "1.0.0",
+  "description": "This is the api for the backend database.  Primarily used for user authentication",
+  "scripts": {
+    "devstart": "nodemon app.js"
+  },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.14",
     "promise": "^8.1.0"
   }
 }
