--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
+    "mongodb": "^4.3.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14",
     "promise": "^8.1.0",
-    "rand-token": "^1.0.1"
+    "rand-token": "^1.0.1",
+    "webpack": "^5.67.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
   }
 }
