--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "method-override": "^3.0.0",
     "mongodb": "^4.3.1",
     "mysql": "^2.18.1",
